--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 .nav-section {
    position: sticky;
    top: 0;
+   z-index: 10;
 }
 
 .nav-container {
@@ -49,7 +50,7 @@
 
 .below-nav {
    display: flex;
-   margin: 100px;
+   margin: 100px 80px 100px ;
    justify-content: space-between;
 }
 
@@ -76,6 +77,18 @@
    color: white;
 }
 
+.btn11 {
+   padding: 5px 20px 5px 20px;
+   border-radius: 5px;
+   background-color: white;
+   color: black;
+}
+
+.btn11:hover{
+   background-color: rgb(224, 224, 224);
+   color: black;
+}
+
 
 .btn:hover {
    background-color: rgb(0, 0, 0);
@@ -95,11 +108,16 @@
 }
 
 .card {
-   height: 200px;
-   width: 300px;
+   height: 250px;
+   width: 280px;
    background-color: aliceblue;
    padding: 20px;
    color: rgb(37, 37, 37);
+}
+
+.card-m-img {
+   width: 280px;
+   border-radius: 5px;
 }
 
 .courses-card:hover {
@@ -127,4 +145,139 @@
 .test-card:hover {
    background-color: rgb(243, 243, 173);
 
+}
+
+.test-cards {
+   background-color: rgb(239, 224, 253);
+   width: 300px;
+   border-radius: 5px;
+   height: 200px;
+   display: flex;
+   flex-direction: column;
+   gap: 10px;
+   padding: 15px;
+}
+
+.test-cards-container {
+   display: grid;
+   grid-template-columns: 1fr 1fr 1fr;
+   gap: 30px;
+}
+
+.left {
+   width: 20%;
+   background-color: rgb(241, 241, 241);
+   margin-right: 10px;
+   position: sticky;
+   top: 35px;
+   z-index: 0;
+   height: 85vh;
+}
+
+.left h1 {
+   margin-top: 40px;
+   padding: 10px;
+}
+
+
+.right {
+   width: 80%;
+}
+
+.neet-test-ul {
+   list-style: none;
+   padding: 10px;
+}
+
+.neet-test-ul li {
+   border: 0.5px solid rgb(213, 213, 213);
+   padding: 10px;
+   border-radius: 5px;
+   margin-top: 10px;
+   font-weight: bold;
+}
+
+.neet-test-ul li:hover {
+   border: 0.5px solid rgb(181, 179, 179);
+   cursor: pointer;
+   margin-top: 10px;
+
+}
+
+.aTCard {
+   display: flex;
+}
+
+/* .test-wide-cards{
+   display: none;
+ } */
+
+.p-guide {
+   width: 100%;
+   padding: 30px;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   background-color: rgb(241, 234, 248);
+}
+
+.p-guide h2 {
+   font-size: 2em;
+   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+   font-weight: 100;
+}
+
+.p-guide h3 {
+   font-size: 2em;
+   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+   font-weight: 500;
+}
+
+.p-guide p {
+   font-size: 1em;
+   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+   font-weight: 500;
+   color: rgb(58, 58, 58);
+}
+
+.p-guide ul {
+   list-style: none;
+   display: flex;
+   padding: 15px;
+}
+
+.p-guide ul li {
+   padding: 15px;
+}
+
+.p-guide ul li input {
+   padding: 8px 50px;
+}
+
+.call-back button {
+   background-color: rgb(198, 198, 200);
+   padding: 15px 40px;
+   border-radius: 5px;
+   border: none;
+   font-size: 16px;
+   color: rgb(49, 49, 49);
+   cursor: pointer;
+}
+
+.call-back button:hover {
+   background-color: rgb(153, 153, 154);
+}
+
+.terms-policy {
+   display: flex;
+   justify-content: center;
+   font-size: 12px;
+   flex-direction: column;
+   padding: 15px;
+}
+
+.terms-policy p span {
+   /* width: 20vw; */
+   color: rgb(0, 145, 255);
 }
